--- a/BlackboardSubmissionCleaner/BlackboardSubmissionCleaner/BlackboardSubmissionCleaner.csproj
+++ b/BlackboardSubmissionCleaner/BlackboardSubmissionCleaner/BlackboardSubmissionCleaner.csproj
@@ -4,7 +4,10 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PublishTrimmed>true</PublishTrimmed>
-    <PublishSingleFile>true</PublishSingleFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SubmissionCleanerEngine\SubmissionCleanerEngine.csproj" />
+  </ItemGroup>
 
 </Project>
